@@ -883,6 +883,7 @@ $strSetupForm_Security = 'Zabezpeční';
 $strSetupForm_Server_config_desc = 'Pokročilé nastavení serveru, neměňte tyto volby, pokud nevíte, čeho se týkají.';
 $strSetupForm_Server_config = 'Nastavení serveru';
 $strSetupForm_Server_desc = 'Vložte parametry připojení k serveru';
+$strSetupForm_Server_login_options = 'Volby přihlašování pomocí Signon';
 $strSetupForm_Server_pmadb_desc = 'Nastavení databáze phpMyAdmina tak, aby získal přístup k dodatečným funkcím, viz [a@../Documentation.html#linked-tables]infrastruktura propojených tabulek[/a] v dokumentaci.';
 $strSetupForm_Server_pmadb = 'PMA databáze';
 $strSetupForm_Server = 'Základní nastavení';
@@ -907,7 +908,7 @@ $strSetupHomepageLink = 'Domovská stránka phpMyAdmina';
 $strSetupCharEditing_desc = 'Definuje, který typ ovládacích prvků má být použit při editaci polí typu CHAR a VARCHAR; [kbd]vstup[/kbd] - umožňuje omezit délku vstupu, [kbd]textová oblast[/kbd] - umožní použít odřádkování.';
 $strSetupCharEditing_name = 'Editace polí typu CHAR';
 $strSetupCharTextareaCols_desc = 'Počet sloupců textových oblastí typu CHAR/VARCHAR.';
-$strSetupCharTextareaCols_name = 'Sloupce pro textové oblasti typu CHAR'; 
+$strSetupCharTextareaCols_name = 'Sloupce pro textové oblasti typu CHAR';
 $strSetupCharTextareaRows_desc = 'Počet řádků textových oblastí typu CHAR/VARCHAR.';
 $strSetupCharTextareaRows_name = 'Řádky pro textové oblasti CHAR';
 $strSetupCheckConfigurationPermissions_name = 'Zkontrolovat přístupová práva konfiguračního souboru';
@@ -970,6 +971,61 @@ $strSetupMemoryLimit_desc = 'Počet bytů, které si může skript alokovat, nap
 $strSetupMemoryLimit_name = 'Omezení paměti';
 $strSetupNavigationBarIconic_desc = 'Zda se mají použít pouze ikony, text, nebo objí.';
 $strSetupNavigationBarIconic_name = 'Ikony v navigační liště';
+$strSetupNewServer = 'Nový server';
+$strSetupNoServers = 'Žádné servery nejsou nastaveny.';
+$strSetupOBGzip_desc = 'Použije mezipaměť pro GZip výstup, čímž zvýší rychlost HTTP přenosů.';
+$strSetupOBGzip_name = 'Mezipaměť pro GZip výstup';
+$strSetupOptionNone = '- žádný -';
+$strSetupOrder_desc = '[kbd]SMART[/kbd] - t.j. řazení sestupně pro políčka typu TIME, DATE, DATETIME a TIMESTAMP, v ostatních případech se použije vzestupné řazení.';
+$strSetupOrder_name = 'Výchozí pořadí řazení';
+$strSetupOverview = 'Přehled';
+$strSetupPersistentConnections_desc = 'Použije trvalé (persistentní) připojení k MySQL databázi.';
+$strSetupPersistentConnections_name = 'Trvalé připojení';
+$strSetupPropertiesIconic_desc = 'Zda se mají zobrazit pouze ikony, nebo pouze text, případně obojí.';
+$strSetupPropertiesIconic_name = 'Zobrazení ikon pro operace s tabulkami';
+$strSetupProtectBinary_desc = 'Zakáže úpravu políček BLOB a BINARY.'
+$strSetupProtectBinary_name = 'Chránit binární políčka';
+$strSetupQueryHistoryDB_desc = 'Povolte pokud chcete histori dotazů založenou na databázi (vyžaduje pmadb). Pokud toto zakážete, využijí se k zobrazení historie Java Scriptové rutiny (se zavřením okna ztratíte předchozí historii).';
+$strSetupQueryHistoryDB_name = 'Nepřetržitá historie dotazů';
+$strSetupQueryHistoryMax_desc = 'Kolik dotazů se má držet v historii.';
+$strSetupQueryHistoryMax_name = 'Délka historie dotazů';
+$strSetupQueryWindowDefTab_desc = 'Panel zobrazený při otevření nového okna dotazů';
+$strSetupQueryWindowDefTab_name = 'Výchozí panel okna dotazů';
+$strSetupRecodingEngine_desc = 'Vybere, které funkce budou použity pro konverzi znakových sad.';
+$strSetupRecodingEngine_name = 'Nástroje pro konverzi znakových sad';
+$strSetupRestoreDefaultValue = 'Obnovit výchozí hodnotu';
+$strSetupRevertErroneousFields = 'Zkusit vrátit původní hodnoty chybných políček';
+$strSetupSaveDir_desc = 'Adresář na serveru pro ukládání exportů';
+$strSetupSaveDir_name = 'Adresář pro ukládání';
+$strSetupServerAuthConfigMsg = 'Nastavil jste typ autentizace [kbd]config[/kbd] a zadal jste uživatelské jméno a heslo pro automatické přihlášení, což není doporučená volba pro produkční servery. Kdokoli kdo zná URL phpMyAdminu může přímo přistoupit k Vašemu  phpMyAdmin panelu. Nastavte [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]typ autentizace[/a] na [kbd]cookie[/kbd] nebo [kbd]http[/kbd].';
+$strSetupServerExtensionMsg = 'Měl byste použít mysqli z výkonostních důvodů.';
+$strSetupServerNoPasswordRootMsg = 'Připustil jste přihlášení uživatele root k serveru bez hesla.';
+$strSetupServersAdd = 'Přidat nový server';
+$strSetupServers_AllowDeny_order_desc = 'Pokud tuto volbu nepoužíváte, nechte ji prázdnou.';
+$strSetupServers_AllowDeny_order_name = 'Příkaz pro autentizaci serverů';
+$strSetupServers_AllowDeny_rules_desc = 'Nechte volbu prázdnou pro výchozí nastavení.';
+$strSetupServers_AllowDeny_rules_name = 'Pravidla autentizace serverů';
+$strSetupServers_AllowNoPasswordRoot_name = 'Povolit uživatele root bez hesla';
+$strSetupServers_AllowRoot_name = 'Povolit přihlašování uživatele root';
+$strSetupServers_auth_swekey_config_desc = 'Cesta ke konfiguračnímu souboru pro [a@http://swekey.com]hardwarovou autentizaci SweKey[/a] (Není umístěna ve Vašem kořenovém adresáři dokumentů; Doporučení: /etc/swekey.conf)';
+$strSetupServers_auth_swekey_config_name = 'Konfigurační soubor SweKey';
+$strSetupServers_auth_type_desc = 'Která autentizační metoda se má použít.';
+$strSetupServers_auth_type_name = 'Typ autentizace';
+$strSetupServers_bookmarktable_desc = 'Nechte prázdné pro žádnou podporu Leave blank for no [a@http://wiki.cihar.com/pma/bookmark]záložek[/a], výchozí nastavení: [kbd]pma_bookmarks[/kbd].';
+$strSetupServers_bookmarktable_name = 'Tabulka záložek';
+$strSetupServers_column_info_desc = 'Nechte prázdné pro žádné komentaře či mime typy sloupců, výchozí nastavení: [kbd]pma_column_info[/kbd].';
+$strSetupServers_column_info_name = 'Tabulka informací o sloupcích';
+$strSetupServers_compress_desc = 'Zda se má komprimovat připojení k MySQL serveru.';
+$strSetupServers_compress_name = 'Komprimovat připojení';
+$strSetupServers_connect_type_desc = 'Jak se připojit k serveru, ponechte tcp pokud si nejste jistí.'
+$strSetupServers_connect_type_name = 'Typ připojení';
+$strSetupServers_controlpass_name = 'Heslo kontrolního uživatele';
+$strSetupServers_controluser_desc = 'Zvláštní MySQL uživatel s omezenými právy, více informací na [a@http://wiki.cihar.com/pma/controluser]wiki[/a].';
+$strSetupServers_controluser_name = 'Kontrolní uživatel';
+$strSetupServers_CountTables_desc = 'Zda počítat tabulky, když se zobrazuje seznam databází.';
+$strSetupServers_CountTables_name = 'Počítat tabulky';
+$strSetupServers_DisableIS_desc = 'Více informací v [a@http://sf.net/support/tracker.php?aid=1849494]PMA bug trackeru[/a] a [a@http://bugs.mysql.com/19588]MySQL Bugs[/a]';
+$strSetupServers_DisableIS_name = 'Zakázat použití INFORMATION_SCHEMA';
 $strSetupVersionCheckLink = 'Zkontrolovat nejnovější verzi';
 $strShowAll = 'Zobrazit vše';
 $strShowColor = 'Barevné šipky';
@@ -1290,64 +1346,8 @@ $strSetuperror_empty_pmadb_user = 'Empty phpMyAdmin control user while using pma
 $strSetuperror_empty_signon_session = 'Empty signon session name while using signon authentication method';  //to translate
 $strSetuperror_empty_signon_url = 'Empty signon URL while using signon authentication method';  //to translate
 $strSetupForm_Server_login_options_desc = 'Enter login options for signon authentication';  //to translate
-$strSetupForm_Server_login_options = 'Signon login options';  //to translate
-$strSetupNewServer = 'New server';  //to translate
-$strSetupNoServers = 'There are no configured servers';  //to translate
-$strSetupOBGzip_desc = 'use GZip output buffering for increased speed in HTTP transfers';  //to translate
-$strSetupOBGzip_name = 'GZip output buffering';  //to translate
-$strSetupOptionNone = '- none -';  //to translate
-$strSetupOrder_desc = '[kbd]SMART[/kbd] - i.e. descending order for fields of type TIME, DATE, DATETIME and TIMESTAMP, ascending order otherwise';  //to translate
-$strSetupOrder_name = 'Default sorting order';  //to translate
-$strSetupOverview = 'Overview';  //to translate
-$strSetupPersistentConnections_desc = 'Use persistent connections to MySQL databases';  //to translate
-$strSetupPersistentConnections_name = 'Persistent connections';  //to translate
-$strSetupPropertiesIconic_desc = 'Use only icons, only text or both';  //to translate
-$strSetupPropertiesIconic_name = 'Iconic table operations';  //to translate
-$strSetupProtectBinary_desc = 'Disallow BLOB and BINARY fields from editing';  //to translate
-$strSetupProtectBinary_name = 'Protect binary fields';  //to translate
-$strSetupQueryHistoryDB_desc = 'Enable if you want DB-based query history (requires pmadb). If disabled, this utilizes JS-routines to display query history (lost by window close).';  //to translate
-$strSetupQueryHistoryDB_name = 'Permanent query history';  //to translate
-$strSetupQueryHistoryMax_desc = 'How many queries are kept in history';  //to translate
-$strSetupQueryHistoryMax_name = 'Query history length';  //to translate
-$strSetupQueryWindowDefTab_desc = 'Tab displayed when opening a new query window';  //to translate
-$strSetupQueryWindowDefTab_name = 'Default query window tab';  //to translate
-$strSetupRecodingEngine_desc = 'Select which functions will be used for character set conversion';  //to translate
-$strSetupRecodingEngine_name = 'Recoding engine';  //to translate
-$strSetupRestoreDefaultValue = 'Restore default value';  //to translate
-$strSetupRevertErroneousFields = 'Try to revert erroneous fields to their default values';  //to translate
-$strSetupSaveDir_desc = 'Directory where exports can be saved on server';  //to translate
-$strSetupSaveDir_name = 'Save directory';  //to translate
-$strSetupServerAuthConfigMsg = 'You set [kbd]config[/kbd] authentication type and included username and password for auto-login, which is not a desirable option for live hosts. Anyone who knows phpMyAdmin URL can directly access your phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http[/kbd].';  //to translate
-$strSetupServerExtensionMsg = 'You should use mysqli for performance reasons';  //to translate
-$strSetupServerNoPasswordRootMsg = 'You allow for connecting to the server as root without a password.';  //to translate
-$strSetupServersAdd = 'Add a new server';  //to translate
-$strSetupServers_AllowDeny_order_desc = 'Leave blank if not used';  //to translate
-$strSetupServers_AllowDeny_order_name = 'Host authentication order';  //to translate
-$strSetupServers_AllowDeny_rules_desc = 'Leave blank for defaults';  //to translate
-$strSetupServers_AllowDeny_rules_name = 'Host authentication rules';  //to translate
-$strSetupServers_AllowNoPasswordRoot_name = 'Allow root without password';  //to translate
-$strSetupServers_AllowRoot_name = 'Allow root login';  //to translate
-$strSetupServers_auth_swekey_config_desc = 'The path for the config file for [a@http://swekey.com]SweKey hardware authentication[/a] (not located in your document root; suggested: /etc/swekey.conf)';  //to translate
-$strSetupServers_auth_swekey_config_name = 'SweKey config file';  //to translate
-$strSetupServers_auth_type_desc = 'Authentication method to use';  //to translate
-$strSetupServers_auth_type_name = 'Authentication type';  //to translate
-$strSetupServers_bookmarktable_desc = 'Leave blank for no [a@http://wiki.cihar.com/pma/bookmark]bookmark[/a] support, default: [kbd]pma_bookmark[/kbd]';  //to translate
-$strSetupServers_bookmarktable_name = 'Bookmark table';  //to translate
-$strSetupServers_column_info_desc = 'Leave blank for no column comments/mime types, default: [kbd]pma_column_info[/kbd]';  //to translate
-$strSetupServers_column_info_name = 'Column information table';  //to translate
-$strSetupServers_compress_desc = 'Compress connection to MySQL server';  //to translate
-$strSetupServers_compress_name = 'Compress connection';  //to translate
-$strSetupServers_connect_type_desc = 'How to connect to server, keep tcp if unsure';  //to translate
-$strSetupServers_connect_type_name = 'Connection type';  //to translate
-$strSetupServers_controlpass_name = 'Control user password';  //to translate
-$strSetupServers_controluser_desc = 'A special MySQL user configured with limited permissions, more information available on [a@http://wiki.cihar.com/pma/controluser]wiki[/a]';  //to translate
-$strSetupServers_controluser_name = 'Control user';  //to translate
-$strSetupServers_CountTables_desc = 'Count tables when showing database list';  //to translate
-$strSetupServers_CountTables_name = 'Count tables';  //to translate
 $strSetupServers_designer_coords_desc = 'Leave blank for no Designer support, default: [kbd]designer_coords[/kbd]';  //to translate
 $strSetupServers_designer_coords_name = 'Designer table';  //to translate
-$strSetupServers_DisableIS_desc = 'More information on [a@http://sf.net/support/tracker.php?aid=1849494]PMA bug tracker[/a] and [a@http://bugs.mysql.com/19588]MySQL Bugs[/a]';  //to translate
-$strSetupServers_DisableIS_name = 'Disable use of INFORMATION_SCHEMA';  //to translate
 $strSetupServerSecurityInfoMsg = 'If you feel this is necessary, use additional protection settings - [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server_config]host authentication[/a] settings and [a@?page=form&amp;formset=features#tab_Security]trusted proxies list[/a]. However, IP-based protection may not be reliable if your IP belongs to an ISP where thousands of users, including you, are connected to.';  //to translate
 $strSetupServersEdit = 'Edit server';  //to translate
 $strSetupServers_extension_desc = 'What PHP extension to use, use mysqli if supported';  //to translate
